--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,13 +1,53 @@
-<div class="page-header">
-  <h1>Log In</h1>
-</div>
 
-<form ng-submit="login()">
-  <div class="input-group">
-    <input type="email" class="form-control" placeholder="Email" ng-model="user.email">
-  </div>
-  <div class="input-group">
-    <input type="password" class="form-control" placeholder="Password" ng-model="user.password">
-  </div>
-  <input type="submit" class="btn btn-default" value="Log In">
-</form>
+        <div id="login-page">
+        <div class="container">
+        
+              <form class="form-login" ng-submit="login()">
+                <h2 class="form-login-heading">Pode começar</h2>
+                <div class="login-wrap">
+                   <input type="text" class="form-control" placeholder="Email" ng-model="user.email" autofocus>
+		            <br>
+		            <input type="password" class="form-control" ng-model="user.password" placeholder="Senha">
+		            <label class="checkbox">
+		                <span class="pull-right">
+		                    <a data-toggle="modal" href="login.html#myModal"> Forgot Password?</a>
+		
+		                </span>
+		            </label>
+		            <button class="btn btn-theme btn-block" type="submit"><i class="fa fa-lock"></i> Entrar </button>
+		            <hr>
+		             <div class="registration">
+		                Ainda não possui cadastro?<br/>
+		                <a class="" href="/#!/register">
+		                    Cria sua sua conta
+		                </a>
+		            </div>
+                </div>
+        
+                  <!-- Modal -->
+                  <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal" class="modal fade">
+                      <div class="modal-dialog">
+                          <div class="modal-content">
+                              <div class="modal-header">
+                                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                  <h4 class="modal-title">Forgot Password ?</h4>
+                              </div>
+                              <div class="modal-body">
+                                  <p>Enter your e-mail address below to reset your password.</p>
+                                  <input type="text" name="email" placeholder="Email" autocomplete="off" class="form-control placeholder-no-fix">
+        
+                              </div>
+                              <div class="modal-footer">
+                                  <button data-dismiss="modal" class="btn btn-default" type="button">Cancel</button>
+                                  <button class="btn btn-theme" type="button">Submit</button>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- modal -->
+        
+              </form>       
+        
+        </div>
+      </div>
+
