--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,13 +1,28 @@
-<div class="page-header">
-  <h1>Register</h1>
-</div>
+<section id="container" >
+        <div id="login-page">
+        <div class="container">
+        
+              <form class="form-login" ng-submit="register()">
+                <h2 class="form-login-heading">Faça seu cadastro</h2>
+                <div class="login-wrap">
+                   <input type="text" class="form-control" placeholder="Nome" ng-model="user.name" autofocus>
+                   <br>
+                   <input type="text" class="form-control" placeholder="Email" ng-model="user.email" autofocus>
+		            <br>
+		            <input type="password" class="form-control" ng-model="user.password" placeholder="Senha"><br>
+		            <button class="btn btn-theme btn-block" type="submit"><i class="fa fa-lock"></i> Salvar </button>
+		            <hr>
+		             <div class="registration">
+		                Já possui cadastro?<br/>
+		                <a class="" href="#!/login">
+		                    Entre na sua conta
+		                </a>
+		            </div>
+                </div>
+        
+              </form>       
+        
+        </div>
+      </div>
 
-<form ng-submit="register()">
-  <div class="input-group">
-    <input type="email" class="form-control" placeholder="Email" ng-model="user.email">
-  </div>
-  <div class="input-group">
-    <input type="password" class="form-control" placeholder="Password" ng-model="user.password">
-  </div>
-  <input type="submit" class="btn btn-default" value="Register">
-</form>
+    </section>
