--- a/public/views/products/edit.html
+++ b/public/views/products/edit.html
@@ -1,1 +1,3 @@
-edit.html
+<h3><i class="fa fa-angle-right"></i> Editar Produto</h3>
+          	
+<div ng-include="'views/products/form.html'"></div>
