--- a/public/views/products/form.html
+++ b/public/views/products/form.html
@@ -1,10 +1,7 @@
-<h3><i class="fa fa-angle-right"></i> {{product.name}}</h3>
-          	
 <div class="row mt">
 	<div class="col-lg-12">
   <div class="form-panel">
-  	  <h4 class="mb"><i class="fa fa-angle-right"></i> Form Elements</h4>
-      <form class="form-horizontal style-form" method="" ng-submit="save(product)">
+      <form class="form-horizontal style-form">
          
           <div class="form-group">
               <label class="col-sm-2 col-sm-2 control-label">Nome</label>
@@ -16,7 +13,7 @@
           <div class="form-group">
               <label class="col-sm-2 col-sm-2 control-label">Price</label>
               <div class="col-sm-10">
-                  <input type="text" ng-model="product.description" class="form-control round-form">
+                  <input type="text" ng-model="product.price" class="form-control round-form">
               </div>
           </div>
 
@@ -26,7 +23,7 @@
                   <input type="text" ng-model="product.description" class="form-control round-form">
               </div>
           </div>
-         <button type="submit">Salvar</button>
+         <button type="submit" ng-click="saveProduct(product)">Salvar</button>
       </form>
   </div>
 	</div><!-- col-lg-12-->      	
