--- a/public/views/products/index.html
+++ b/public/views/products/index.html
@@ -1,4 +1,3 @@
-
 <section class="wrapper site-min-height">
 	<div class="row">
 		<div  ng-repeat="product in products">
@@ -8,11 +7,11 @@
 						<h3>{{product.title}}</h3>
 						<h6>{{product.description}}</h6>
 					</div>
-					<a href="/#!/produtos/{{product.id}}"><div class="profile-01 centered">
+					<a href="/#!/produto/{{product.id}}"><div class="profile-01 centered">
 						<p>Detalhes</p>
 					</div></a>
 
-					<div class="profile-01 centered">
+					<div class="profile-01 centered" ng-click="destroy(product.id)">
 						<p>Deletar</p>
 					</div>
 				</div>
