--- a/public/views/products/new.html
+++ b/public/views/products/new.html
@@ -1,34 +1,3 @@
-<h3><i class="fa fa-angle-right"></i> {{product.name}}</h3>
+<h3><i class="fa fa-angle-right"></i> Novo Produto</h3>
           	
-<div class="row mt">
-	<div class="col-lg-12">
-  <div class="form-panel">
-  	  <h4 class="mb"><i class="fa fa-angle-right"></i> Form Elements</h4>
-      <form class="form-horizontal style-form" method="" >
-         
-          <div class="form-group">
-              <label class="col-sm-2 col-sm-2 control-label">Nome</label>
-              <div class="col-sm-10">
-                  <input type="text" ng-model="product.title" class="form-control round-form">
-              </div>
-          </div>
-
-          <div class="form-group">
-              <label class="col-sm-2 col-sm-2 control-label">Price</label>
-              <div class="col-sm-10">
-                  <input type="text" ng-model="product.price" class="form-control round-form">
-              </div>
-          </div>
-
-          <div class="form-group">
-              <label class="col-sm-2 col-sm-2 control-label">Description</label>
-              <div class="col-sm-10">
-                  <input type="text" ng-model="product.description" class="form-control round-form">
-              </div>
-          </div>
-         <button type="submit" ng-click="saveProduct(product)">Salvar</button>
-      </form>
-  </div>
-	</div><!-- col-lg-12-->      	
-</div><!-- /row -->
-	
+<div ng-include="'views/products/form.html'"></div>
